--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,3 +17,36 @@ footer.footer{
     bottom: 0;
     width: 100%;
 }
+
+p{
+    font-family: $font-family-sans-serif;
+    font-size: 18px;
+}
+
+.hero-scene {
+    position: relative;
+    &::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../images/platter.jpg);
+        background-size: cover;
+        filter: brightness(0.3);
+    }
+
+    *{
+        //Postionner les éléments devant le ::before
+        position: relative;
+    }
+
+    .hero-scene-content {
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
