Ajout Section/Articles

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,7 +5,7 @@ $secondary: #B6AC97;
 $dark: #392C1E;
 $black: #292222;
 
-$font-family-sans-serif: "Montserrat", sans-serif !default;
-$font-family-serif: "Hind Madurai", serif !default;
+$font-family-sans-serif: "Hind Madurai", serif !default;
+$font-family-serif: "Montserrat", sans-serif !default;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
