--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@ footer.footer{
 }
 
 p{
-    font-family: $font-family-sans-serif;
+    font-family: $font-family-serif;
     font-size: 18px;
 }
 
@@ -49,4 +49,8 @@ p{
         align-items: center;
         justify-content: center;
     }
+}
+
+.text-justify {
+    text-align: justify;
 }
