galerie + page menu + first media querie

--- a/scss/main.css
+++ b/scss/main.css
@@ -12014,4 +12014,30 @@ p {
 
 .text-justify {
   text-align: justify;
+}
+
+.image-card {
+  position: relative;
+}
+.image-card:hover .titre-image {
+  opacity: 1;
+}
+.image-card:hover img {
+  filter: brightness(0.3);
+}
+.image-card img {
+  transition: all 0.3s;
+}
+.image-card .titre-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
+
+@media (max-width: 780px) {
+  main {
+    margin-bottom: 300px;
+  }
 }/*# sourceMappingURL=main.css.map */
