--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,3 +54,35 @@ p{
 .text-justify {
     text-align: justify;
 }
+
+.image-card {
+    position: relative;
+    &:hover{
+        .titre-image {
+            opacity: 1;
+        }
+        img {
+            filter: brightness(0.3);
+        }
+        
+    }
+
+    img {
+        transition: all 0.3s;
+    }
+
+    .titre-image {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+    }
+}
+
+@media (max-width: 780px) {
+
+    main{
+        margin-bottom: 300px;
+    }
+}
