ajout bouton edition images galeries

--- a/scss/main.css
+++ b/scss/main.css
@@ -12020,7 +12020,7 @@ p {
 .image-card {
   position: relative;
 }
-.image-card:hover .titre-image {
+.image-card:hover .titre-image, .image-card:hover .action-class-buttons {
   opacity: 1;
 }
 .image-card:hover img {
@@ -12035,6 +12035,18 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
+  transition: all 0.3s;
+}
+.image-card .action-class-buttons {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  opacity: 0;
+  transition: all 0.3s;
 }
 
 .menu-card {
