gestion de l'affichage réservation

--- a/scss/main.css
+++ b/scss/main.css
@@ -12071,6 +12071,12 @@ p {
   color: #906427;
 }
 
+.allReservations a {
+  display: block;
+  color: #292222;
+  padding: 10px;
+}
+
 @media (max-width: 780px) {
   main {
     margin-bottom: 330px;
