--- a/scss/main.scss
+++ b/scss/main.scss
@@ -121,6 +121,18 @@ p{
     color: $primary;
 }
 
+.allReservations {
+    a{
+        display: block;
+        color: $black;
+        padding: 10px;
+    }
+}
+
+
+
+
+
 @media (max-width: 780px) {
 
     main{
