gestion champs reservation

--- a/scss/main.css
+++ b/scss/main.css
@@ -12013,6 +12013,8 @@ p {
   justify-content: center;
 }
 
+/*---------Animation--------------------*/
+/*----------------------------------------*/
 .text-justify {
   text-align: justify;
 }
@@ -12079,6 +12081,6 @@ p {
 
 @media (max-width: 780px) {
   main {
-    margin-bottom: 330px;
+    margin-bottom: 320px;
   }
 }/*# sourceMappingURL=main.css.map */
