--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,16 @@ p{
     }
 }
 
+/*---------Animation--------------------*/
+
+
+
+
+
+
+/*----------------------------------------*/
+
+
 .text-justify {
     text-align: justify;
 }
@@ -136,6 +146,6 @@ p{
 @media (max-width: 780px) {
 
     main{
-        margin-bottom: 330px;
+        margin-bottom: 320px;
     }
 }
